--- a/client/webapp/src/main/webapp/app/cockpit/templates/navigation.html
+++ b/client/webapp/src/main/webapp/app/cockpit/templates/navigation.html
@@ -17,7 +17,7 @@
         </li>
         <li class="divider"></li>
         <li>
-          <a ng-click="logout()">
+          <a href ng-click="logout()">
             Sign out
           </a>
         </li>
