--- a/client/webapp/src/main/webapp/assets/styles/cockpit/app.less
+++ b/client/webapp/src/main/webapp/assets/styles/cockpit/app.less
@@ -416,9 +416,9 @@ a.expand-collapse {
     margin: 0 0 5px 0;
     width: 100%;
 
-    // height: 26px;
-    // -moz-box-sizing: border-box;
-    //      box-sizing: border-box;
+    height: 26px;
+    -moz-box-sizing: border-box;
+         box-sizing: border-box;
   }
 
   .search-date {
