improve(cockpit/misc): add minor improvements
- Add comments to some templates for easier development.
- Add the ability to run a certain set of e2e tests
  (using environment variable "E2E_TESTS")

--- a/client/webapp/src/main/webapp/app/tasklist/templates/navigation.html
+++ b/client/webapp/src/main/webapp/app/tasklist/templates/navigation.html
@@ -1,3 +1,4 @@
+<!-- # CE - src/main/webapp/app/tasklist/templates/navigation.html -->
 <div class="nav-collapse collapse navbar-responsive-collapse" ng-cloak>
   <ul class="nav pull-right" ng-controller="AuthenticationController">
 
@@ -64,3 +65,4 @@
     </li>
   </ul>
 </div>
+<!-- / CE - src/main/webapp/app/tasklist/templates/navigation.html -->
