--- a/client/webapp/src/main/webapp/plugin/jobDefinition/app/views/processDefinition/job-definition-suspension-overlay.html
+++ b/client/webapp/src/main/webapp/plugin/jobDefinition/app/views/processDefinition/job-definition-suspension-overlay.html
@@ -1,3 +1,5 @@
+<!-- # CE - src/main/webapp/plugin/jobDefinition/app/views/processDefinition/job-definition-suspension-overlay.html -->
 <span class="badge badge-warning badge-suspended activity-top-right-position" ng-show="jobDefinition && jobDefinition.suspended">
   <i class="icon-suspended white"></i>
 </span>
+<!-- / CE - src/main/webapp/plugin/jobDefinition/app/views/processDefinition/job-definition-suspension-overlay.html -->
