chore(cockpit/style): add style for canceled activity intances
related to CAM-1923

--- a/client/webapp/src/main/webapp/assets/styles/cockpit/app.less
+++ b/client/webapp/src/main/webapp/assets/styles/cockpit/app.less
@@ -52,6 +52,13 @@
   padding: 1px 8px;
 }
 
+.activity-instance-canceled {
+  background-color: #ffffff;
+  color: #000000;
+  border: 1px solid #000000;
+  padding: 1px 8px;
+}
+
 .activity-bottom-left-position {
    position: absolute;
    left: -0.9em;
