--- a/client/webapp/src/main/webapp/plugin/base/app/views/dashboard/process-definition-list.html
+++ b/client/webapp/src/main/webapp/plugin/base/app/views/dashboard/process-definition-list.html
@@ -13,7 +13,7 @@
       </tr>
     </thead>
     <tbody>
-      <tr data-ng-repeat="statistic in statistics">
+      <tr data-ng-repeat="statistic in statistics | orderBy:orderByPredicate:orderByReverse">
         <td>
           <a href="#/process-definition/{{ statistic.definition.id }}">
             {{ statistic.definition.name }}
