chore(webapp/admin): add .monospaced CSS class
- add css class

related to #CAM-1882

--- a/client/webapp/src/main/webapp/assets/styles/admin/app.less
+++ b/client/webapp/src/main/webapp/assets/styles/admin/app.less
@@ -47,3 +47,7 @@ span.permissions-editor {
   cursor: auto;
   background-color: #ffffff;
 }
+
+.monospaced {
+  font-family:'Courier New', Courier, monospace;  
+}
