improve(cockpit/states): add styling and tooltips for states
This commit slightly improve the UI by fixing the color coding
of the states and adding some tooltips at several places
(like the badges on the diagram and in the forms).

Related to CAM-1989, CAM-1980

--- a/client/webapp/src/main/webapp/assets/styles/_vars.less
+++ b/client/webapp/src/main/webapp/assets/styles/_vars.less
@@ -19,6 +19,9 @@
 @important-color: #b94a48;
 @important-darker: darken(@important-color, 45%);
 
+@warning-color: #f89406;
+@warning-darker: #c67605;//darken(@warning-color, 45%);
+
 
 // process state colors
 @running-color: desaturate(lighten(@link-color, 25%), 40%);
