--- a/client/webapp/src/main/webapp/assets/styles/bootstrap.patched.less
+++ b/client/webapp/src/main/webapp/assets/styles/bootstrap.patched.less
@@ -4817,19 +4817,19 @@ a.badge:focus{
 }
 .label-important,
 .badge-important{
-  background-color:#b94a48
+  background-color: @important-color;//#b94a48
 }
 .label-important[href],
 .badge-important[href]{
-  background-color:#953b39
+  background-color: @important-darker;//#953b39
 }
 .label-warning,
 .badge-warning{
-  background-color:#f89406
+  background-color: @warning-color;
 }
 .label-warning[href],
 .badge-warning[href]{
-  background-color:#c67605
+  background-color: @warning-darker;//#c67605
 }
 .label-success,
 .badge-success{
