fix(cockpit): fix typo in dialog

--- a/client/webapp/src/main/webapp/plugin/base/app/views/processInstance/job-retry-dialog.html
+++ b/client/webapp/src/main/webapp/plugin/base/app/views/processInstance/job-retry-dialog.html
@@ -16,7 +16,7 @@
   </div>
 
   <div ng-show="status === 'failed'">
-    The number of retries of the corresponding failed job of the selected incident could not been incremented successfully.
+    The number of retries of the corresponding failed job of the selected incident could not be incremented successfully.
   </div>
 
 </div>
