--- a/client/webapp/src/main/webapp/plugin/base/app/views/processDefinition/process-instance-table.html
+++ b/client/webapp/src/main/webapp/plugin/base/app/views/processDefinition/process-instance-table.html
@@ -25,7 +25,7 @@
               ng-show="processInstance.suspended"
               help
               help-text="Currently suspended"
-              help-placement="left">
+              help-placement="'left'">
           <i class="icon-suspended white"></i>
         </span>
       </td>
