--- a/client/webapp/src/main/webapp/plugin/jobDefinition/app/views/processDefinition/job-definition-suspension-overlay.html
+++ b/client/webapp/src/main/webapp/plugin/jobDefinition/app/views/processDefinition/job-definition-suspension-overlay.html
@@ -1,8 +1,8 @@
 <!-- # CE - src/main/webapp/plugin/jobDefinition/app/views/processDefinition/job-definition-suspension-overlay.html -->
 <span class="badge badge-warning badge-suspended activity-top-right-position"
       help
-      help-text="Suspended instance"
-      help-placement="left"
+      help-text="Suspended Job Definition"
+      help-placement="'top'"
       ng-show="jobDefinition && jobDefinition.suspended">
   <i class="icon-suspended white"></i>
 </span>
